# camera_lidar_imu_calibration

./: CMakeLists.txt  package.xml
include/camera_lidar_imu_calibration/core/: calibManager.h  calibManagerOptions.h
include/camera_lidar_imu_calibration/init/: InertialInitializer.h
include/camera_lidar_imu_calibration/relpose/: relativePose.h
include/camera_lidar_imu_calibration/state/: Propagator.h  State.h  StateHelper.h  StateOptions.h
include/camera_lidar_imu_calibration/track/: cameraPoseTracking.h  lidarOdometry.h  lidarPlaneDetector.h
include/camera_lidar_imu_calibration/types/: IMU.h  Pose.h  Quat.h  Vec.h
include/camera_lidar_imu_calibration/update/: UpdaterCameraLidarConstraint.h  UpdaterCameraTracking.h  UpdaterLidarOdometry.h  UpdaterOptions.h
include/camera_lidar_imu_calibration/utils/: eigen_utils.h  parse_ros.h  pcl_utils.h  quat_ops.h
launch/: camera_imu_lidar_calibration.launch  camera_imu_lidar_calibration_bagcreater.launch  lidar_imu_calibration.launch  lidar_imu_rotation.launch
src/: camera_lidar_imu_calibration.cpp  camera_lidar_imu_calibration_bag_generator.cpp
src/core/: calibManager.cpp  calibManager.h  calibManagerOptions.h
src/init/: InertialInitializer.cpp  InertialInitializer.h
src/relpose/: relativePose.h
src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
src/track/: cameraPoseTracking.cpp  cameraPoseTracking.h  lidarOdometry.cpp  lidarOdometry.h  lidarPlaneDetector.cpp  lidarPlaneDetector.h
src/types/: IMU.h  Pose.h  Quat.h  Type.h  Vec.h
src/update/: UpdaterCameraLidarConstraint.cpp  UpdaterCameraLidarConstraint.h  UpdaterCameraTracking.cpp  UpdaterCameraTracking.h  UpdaterLidarOdometry.cpp  UpdaterLidarOdometry.h
src/utils/: color.h  math_utils.h  parse_ros.h  pcl_utils.h
